# bedrock-test-chat-app

./: LICENSE  README.md  app.py  bedrock_client.py  chat_agent.py  chat_database.db  config.py  database.py  pyproject.toml  run_app.sh  run_with_poetry.py  test_real_streaming.py  test_real_time_thinking.py
static/css/: style.css
static/js/: app.js
templates/: 404.html  500.html  error.html  index.html  index.html.backup  welcome.html
