[tool.poetry]
name = "bedrock-chat-app"
version = "0.1.0"
description = "A Flask chat application using AWS Bedrock and LangGraph"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.0"
flask-socketio = "^5.3.0"
boto3 = "^1.35.0"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-aws = "^0.2.0"
langgraph = "^0.2.0"
python-dotenv = "^1.0.0"
eventlet = "^0.33.0"
requests = "^2.31.0"
markdown = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto" 